test_data/Xml/Unexpected/Unserializable/InvalidClassName/dataSpecificationIec61360/wrong.xml.exception
Expected an element representing an instance of class DataSpecificationIec61360 with element name dataSpecificationIec61360, but got: utterlyInvalid at: the beginning